<resources>
  <string name="app_name" translatable="false">ThrowInDB</string>

  <string name="scan">Scan QR</string>
  <string name="title" translatable="false">ThrowInDB</string>
  <string name="title_add">QR Storage Manager</string>
  <string name="new_qrcode_error">Error adding QR, please try again.</string>
  <string name="new_qrcode_error_preview">Error generating preview QR</string>

  <string name="qrcode_data_title">QR Data</string>
  <string name="qrcode_image_description">QR Image</string>
  <string name="fab_content_description">New storage</string>
  <string name="empty_arr">Press + to create new storage</string>

  <string name="title_activity_new_storage">New storage</string>
  <string name="new_storage_desc">Storage description: list your things\nKeep it simple\nUse photo and video to avoid long description</string>
  <string name="new_qrcode_btn">Save</string>
  <string name="new_qrcode_image_desc">QR Preview</string>
  <string name="short_text">Add short description</string>

  <string name="title_activity_qrcode_detail">QR Info</string>
  <string name="qrcode_detail_fab">Remove QRCode</string>

  <string name="take_photo">Take Photo</string>
  <string name="start_capture">Start Capture</string>
  <string name="stop_capture">Stop Capture</string>
  <string name="show_video">Show Video</string>
  <string name="remove_storage">Remove Storage</string>
  <string name="show_qr">Show QR</string>
  <string name="search">Search</string>
  <string name="search_hint">Type search string</string>
  <string name="share">Share</string>
</resources>