<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QRCodeDetailActivity">
  <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/titleBar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      android:contentDescription="@string/title"
      app:title="@string/title"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:menu="@menu/menu_detail"/>
  <TextView
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:id="@+id/qrCodeDetailText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="70dp"
      android:autoLink="all"
      android:autoSizeTextType="uniform"
      android:ellipsize="marquee"
      android:marqueeRepeatLimit="marquee_forever"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.459"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:layout_marginBottom="16dp"
      android:id="@+id/qrCodeDetailImage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:srcCompat="@tools:sample/avatars"/>
  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/video_play_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      android:text="@string/show_video"
      android:layout_marginBottom="16dp"
      android:layout_marginLeft="16dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:backgroundTint="@android:color/holo_green_light"
      app:layout_constraintLeft_toLeftOf="parent"
      android:visibility="gone"
      app:rippleColor="@android:color/transparent"
      android:outlineProvider="none"
      app:srcCompat="@android:drawable/ic_media_play"/>
  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/qrCodeDetailFab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginRight="16dp"
      android:clickable="true"
      android:text="@string/remove_storage"
      app:backgroundTint="@android:color/holo_red_light"
      app:layout_constraintBottom_toBottomOf="parent"
      app:rippleColor="@android:color/transparent"
      android:outlineProvider="none"
      app:layout_constraintEnd_toEndOf="parent"
      app:srcCompat="@android:drawable/ic_menu_delete"/>
</androidx.constraintlayout.widget.ConstraintLayout>